# ai_interview

./: .env.template  .gitignore  README.md  asset-manifest.json  docker-compose.yml  index.html  jenkins.pipeline  jenkins.sh  sonar-project.properties
.github/workflows/: backend.yml  build_and_push.yml  ci.yml  frontend.yml
ansible/: inventory.yml  main.yml
ansible/playbooks/: build_push.yml  configure.yml
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  database.py  main.py  ml_model_service.py  models.py  schemas.py  settings.py
backend/tests/: test_api.py  test_parse_hh.py  test_parse_vacancy.py
backend/tests/mocks/: vacancy.html
coverage-reports/: coverage.xml
deploy/: create_vm.sh  playbook.yml  vars.yml.template
deploy/playbooks/: build_push.yml  configure.yml  deploy.yml
frontend/: jest.config.js
frontend/interview-app/: Dockerfile  package-lock.json  package.json
helm/: Chart.yaml  values.yaml.template
helm/jenkins/: values.yaml
helm/templates/: backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ml-service-deployment.yaml  ml-service-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml  servicemonitor.yaml  tg-bot-deployment.yaml  tg-bot-service.yaml
ml_service/: Dockerfile  pyproject.toml
ml_service/app/: main.py  model.py  schemas.py  settings.py
ml_service/tests/: test_model.py
static/css/: main.2648cc6c.css  main.2648cc6c.css.map  (+2 more)
tg_bot/: Dockerfile  pyproject.toml
tg_bot/app/: main.py  ml_model_service.py  parse_hh.py  settings.py  utils.py
(+21 files in other folders)
