[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
httpx = "^0.28.1"
prometheus-client = "^0.22.0"
starlette = "^0.46.2"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
