[tool.poetry]
name = "ml-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gigachat = "^0.1.39.post1"
fastapi = "^0.115.12"
pydantic = "^2.11.3"
uvicorn = "^0.34.2"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
