[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pytelegrambotapi = "^4.27.0"
beautifulsoup4 = "^4.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
